# FL-RMQ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
experiments/: CMakeLists.txt  bar_plot_lcp.cpp  build_uniform.cpp  utils.hpp
include/: block_decomposition.hpp  block_decomposition_hb.hpp  bp_utils.hpp  fl_rmq.hpp  fl_rmq_encoding.hpp  fl_rmq_succ.hpp  fl_rmq_succ_2.hpp  hybrid_rmq.hpp  piecewise_linear_model.hpp  segment_tree.hpp  sparse_table.hpp  top_level_sparse_table.hpp
tests/: CMakeLists.txt  test.cpp  test_bp.cpp  test_rmq.cpp
